[package]
name = "rust-print"
description = "An attempt to improve my ability to design complex 3d shapes"
authors = ["Christopher Hotchkiss <christopher.hotchkiss@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chotchki/rust-print"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"

winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
stl_io = "0.6.0"